--- a/firstdjango/static/main.css
+++ b/firstdjango/static/main.css
@@ -1,11 +1,29 @@
-h1, h2, h3 {
-	font-size: 2.5em;
-}
 a {
 	font-size: 2em;
 }
-ul {
-	list-style-type: none;
+
+#top-menu {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333333;
+}
+
+#top-menu li {
+    float: left;
+}
+
+#top-menu li a{
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 16px;
+    text-decoration: none;
+}
+
+#top-menu li a:hover{
+    background-color: #111111;
 }
 
 .hovered {
@@ -15,4 +33,84 @@ ul {
 a {
 	text-decoration: none;
 	color: #33D;
+}
+
+table {
+    border-spacing: 5px;
+}
+
+table, th, td {
+    border: 1px solid grey;
+}
+
+th, td {
+    padding: 15px;
+}
+
+th {
+    text-align: left;
+}
+
+body{
+    margin: 0px;
+}
+
+table#cheatsheet-table01 {
+    width: 50%;
+    background-color: #f1f1f1;
+}
+
+table#cheatsheet-table01 tr:nth-child(even) {
+    background-color: green;
+}
+
+table#cheatsheet-table01 tr:nth-child(odd) {
+    background-color: yellow;
+}
+
+table#cheatsheet-table01 th {
+    background-color: white;
+}
+
+.tupka1{
+
+}
+.tupka2{
+    background-color: aquamarine;
+    color: red;
+}
+.tupka3{
+    padding: 5px;
+    width: 20%;
+    border: 1px solid black;
+    font-weight: bold;
+    text-align: center;
+}
+
+.other-el{
+    color: brown;
+}
+
+.parent-el, .other-el{
+    font-weight: bold;
+}
+
+.parent-el{
+    margin: 50px;
+    border: 2px solid black;
+    background-color: yellow;
+    color: green;
+}
+
+.parent-el *{
+    color: red;
+}
+
+.footer{
+    background-color: grey;
+    font-size: 2em;
+    color: white;
+    font-weight: bold;
+    padding: 2em;
+    text-align: center;
 }
