--- a/firstdjango/templates/inventory/index.html
+++ b/firstdjango/templates/inventory/index.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-	<h3>Items in stock</h3>
+	<a href="{% url 'cheatsheet' %}">HTML cheatsheet</a> <br>
+	<a href="{% url 'htmllayout' %}">HTML Layout example</a>
+	<h1>Items in stock</h1>
 	<ul>
 		{% for item in items %}
 			<li>	
