--- a/firstdjango/templates/base.html
+++ b/firstdjango/templates/base.html
@@ -58,9 +58,10 @@
 		</style>
 	</head>
 	<body>
+		<a href="{% url 'index' %}">&gt;Homepage</a> <br>
 	    {% block content %}
 		{% endblock content %}
-        <div class="footer">Footer</div>
+        <div id="footer">Footer</div>
 		<script src="{% static 'main.js' %}"></script>
 	</body>
 </html>
