--- a/firstdjango/templates/inventory/html_cheatsheet.html
+++ b/firstdjango/templates/inventory/html_cheatsheet.html
@@ -174,7 +174,7 @@ close to 5 million globally.</blockquote>
 <div class="other-el">
     new div
 </div>
-<iframe src="http://instantclick.io/" name="myframe" width="450" height="450" style="border: 2px solid green;"></iframe>
+<iframe src="http://lsm.lv/" name="myframe" width="450" height="450" style="border: 2px solid green;"></iframe>
 <p id="medlink"><a href="http://meduza.io" target="myframe">Load meduza</a></p>
 <p id="demo" onclick="changeDemoText()">Demo text (click it)</p>
 <script>
@@ -210,4 +210,5 @@ close to 5 million globally.</blockquote>
 <p>If you make an error, PC will say <samp>Error!&copy;</samp></p>
 <p>Pay me 1500&euro;, please.</p>
 <p>E&#771;kay! &#15; &lt; &amp; </p>
+<yopta>New HTML element!</yopta>
 {% endblock content %}
