--- a/firstdjango/templates/inventory/index.html
+++ b/firstdjango/templates/inventory/index.html
@@ -4,7 +4,10 @@
 	<a href="{% url 'cheatsheet' %}">HTML cheatsheet</a> <br>
 	<a href="{% url 'htmllayout' %}">HTML Layout example</a><br>
 	<a href="{% url 'htmlforms' %}">HTML Forms</a><br>
-	<div id="croppedimg"></div>
+	<a href="{% url 'htmlcanvas' %}">HTML Canvas</a><br>
+	<a href="{% url 'htmldragndrop' %}">HTML Drag&Drop</a><br>
+	<a href="{% url 'webworker' %}">HTML Web Worker</a><br>
+	<a href="{% url 'sse' %}">HTML Server Side Events (SSE)</a><br>
 
 	<h1>Items in stock</h1>
 	<ul>
