Fixed canvas error.

--- a/firstdjango/templates/inventory/html_canvas.html
+++ b/firstdjango/templates/inventory/html_canvas.html
@@ -5,5 +5,5 @@
 
 <canvas id="myFirstCanvas" width="400" height="250" style="border: 1px solid black;">Some text...</canvas>
 <img id="imagka" src="{% static 'html_cheatsheet/example_photo.jpg' %}" alt="Image" width="420" height="260">
-
+<script src="{% static 'canvas.js' %}"></script>
 {% endblock content %}
